	* Support for installing into the system
	* Use ~/.urlwatch/ for config, cache and hooks
	* Apply BSD license
	* Add setup.py (and remove makefile)
	* Command-line options
	* Verbose logging mode
	* Example urls.txt and hooks.py
	* Update README
	* Add manpage (urlwatch.1)
	* Release version 1.5

2008-12-23 Thomas Perl <thp.io/about>
	* Use hashlib in Python 2.5 and above for SHA-1 generation
	* Release version 1.6

2009-01-03 Thomas Perl <thp.io/about>
	* Add urlwatch.html2txt module to convert/format HTML to plaintext
	* Add example of using html2txt in the example hooks file
	* The html-to-plaintext feature has been suggested by Evert Meulie
	* Release version 1.7

2009-01-05 Thomas Perl <thp.io/about>
	* Fix a problem with relative links in Lynx' "-dump" mode

2009-01-07 Thomas Perl <thp.io/about>
	* Fix another problem with file-relative links in html2text w/ Lynx

2009-01-12 Thomas Perl <thp.io/about>
	* Describe ical2txt and html2txt with examples in manpage

2009-01-15 Thomas Perl <thp.io/about>
	* Add TODO list

2009-01-20 Thomas Perl <thp.io/about>
	* Set the socket timeout to one minute to avoid hangs

2009-07-27 Thomas Perl <thp.io/about>
	* Catch and handle IOErrors from FTP timeouts

2009-08-01 Thomas Perl <thp.io/about>
	* Add error handling for socket timeouts (HTTP mode)

2009-08-10 Thomas Perl <thp.io/about>
	* Handle httplib errors (Debian bug 529740)
	  (Thanks to Bastian Kleineidam and Franck Joncourt)
	* urlwatch 1.8 released

2009-09-29 Thomas Perl <thp.io/about>
	* Support for shell pipe (|) in urls.txt
	* Support for If-Modified-Since header + HTTP 304
	* Show previous/current timestamp in diff output
	* Remove TODO list
	* urlwatch 1.9 released

2010-05-10 Thomas Perl <thp.io/about>
	* Get encoding from headers and convert to UTF-8
	  (suggested by Ján Ondrej)
	* urlwatch 1.10 released

2010-07-30 Thomas Perl <thp.io/about>
	* Detect non-zero shell command exit codes and raise an error
	* urlwatch 1.11 released
