@@ -1,9 +1,10 @@
-Copyright (c) 2008-2010 Thomas Perl <thp.io/about>
+Copyright (c) 2008-2011 Thomas Perl <thp.io/about>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
+
 1. Redistributions of source code must retain the above copyright
    notice, this list of conditions and the following disclaimer.
 2. Redistributions in binary form must reproduce the above copyright
