@@ -3,7 +3,7 @@
 # Requirements: Either lynx (default) or html2text or simply Python (for regex)
 # This file is part of urlwatch
 #
-# Copyright (c) 2009-2010 Thomas Perl <thp.io/about>
+# Copyright (c) 2009-2011 Thomas Perl <thp.io/about>
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
