@@ -3,7 +3,7 @@
 # Requirements: python-vobject (http://vobject.skyhouseconsulting.com/)
 # This file is part of urlwatch
 #
-# Copyright (c) 2008-2010 Thomas Perl <thp.io/about>
+# Copyright (c) 2008-2011 Thomas Perl <thp.io/about>
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
