@@ -1,7 +1,7 @@
 #!/usr/bin/python
 # Generic setup.py file (for urlwatch)
 #
-# Copyright (c) 2008-2010 Thomas Perl <thp.io/about>
+# Copyright (c) 2008-2011 Thomas Perl <thp.io/about>
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
