@@ -3,7 +3,7 @@
 #
 # urlwatch is a minimalistic URL watcher written in Python
 #
-# Copyright (c) 2008-2010 Thomas Perl <thp.io/about>
+# Copyright (c) 2008-2011 Thomas Perl <thp.io/about>
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
@@ -34,10 +34,10 @@
 pkgname = 'urlwatch'
 
 __author__ = 'Thomas Perl <m@thp.io>'
-__copyright__ = 'Copyright 2008-2010 Thomas Perl'
+__copyright__ = 'Copyright 2008-2011 Thomas Perl'
 __license__ = 'BSD'
 __homepage__ = 'http://thp.io/2008/urlwatch/'
-__version__ = '1.11'
+__version__ = '1.12'
 
 user_agent = '%s/%s (+http://thp.io/2008/urlwatch/info.html)' % (pkgname, __version__)
 
