@@ -1,4 +1,4 @@
-.TH URLWATCH "1" "July 2010" "urlwatch 1.11" "User Commands"
+.TH URLWATCH "1" "February 2011" "urlwatch 1.12" "User Commands"
 .SH NAME
 urlwatch \- Watch web pages and arbitrary URLs for changes
 .SH SYNOPSIS
